tdf#125971: map file URLs from QFileDialog to LO internal format

jmux' suggestion at
<https://bugs.documentfoundation.org/show_bug.cgi?id=125971#c7> turns out to be
the correct fix after all; explained in a lengthy comment why that seemingly
wrong call of translateToInternal happens to do the right thing.

(Much of this patch is about passing the XComponentContext down to where it is
now needed in Qt5FilePicker::getSelectedFiles.)

Change-Id: I235554f8494cd3094a011d5a903059326db499fc
Reviewed-on: https://gerrit.libreoffice.org/74359
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>
(cherry picked from commit e2589f4584efcf0306ab69f7223abdd7469e3604)
Reviewed-on: https://gerrit.libreoffice.org/75587
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>