vcl/inc/qt5/Qt5Instance.hxx
@@ -78,7 +78,9 @@ Q_SIGNALS:
     void deleteObjectLaterSignal(QObject* pObject);
 
 protected:
-    virtual Qt5FilePicker* createPicker(QFileDialog::FileMode);
+    virtual Qt5FilePicker*
+    createPicker(css::uno::Reference<css::uno::XComponentContext> const& context,
+                 QFileDialog::FileMode);
 
 public:
     explicit Qt5Instance(std::unique_ptr<QApplication>& pQApp, bool bUseCairo = false);
