vcl/unx/kde5/KDE5FilePicker2.cxx
@@ -49,9 +49,10 @@ uno::Sequence<OUString> FilePicker_getSupportedServiceNames()
 
 // KDE5FilePicker
 
-KDE5FilePicker::KDE5FilePicker(QFileDialog::FileMode eMode)
+KDE5FilePicker::KDE5FilePicker(css::uno::Reference<css::uno::XComponentContext> const& context,
+                               QFileDialog::FileMode eMode)
     // Native kde5 filepicker does not add file extension automatically
-    : Qt5FilePicker(eMode, true, true)
+    : Qt5FilePicker(context, eMode, true, true)
     , _layout(new QGridLayout(m_pExtraControls))
     , allowRemoteUrls(false)
 {
